--- a/index.html
+++ b/index.html
@@ -327,39 +327,40 @@
                 <div class="row">
                   <div class="col-3">
                     <ul class="list-unstyled">
-                      <li><a href="">Villas in Albufeira
+                      <li><a href="">Albufeira
                         </a></li>
-                      <li><a href="">Villas in Crete
+                      <li><a href="">Crete
                         </a></li>
-                      <li><a href="">Villas in Tenerife
+                      <li><a href="">Tenerife
                         </a></li>
                     </ul>
                     
                   </div>
                   <div class="col-3"><ul class="list-unstyled">
-                    <li><a href="">Villas in Lanzarote
+                    <li><a href="">Lanzarote
                       </a></li>
-                    <li><a href="">Villas in Malta
+                    <li><a href="">Malta
                       </a></li>
-                    <li><a href="">Villa holidays
+                    <li><a href="">holidays
                       </a></li>
                   </ul></div>
                   <div class="col-3"><ul class="list-unstyled">
-                    <li><a href="">Villas in Greece
+                    <li><a href="">Greece
                       </a></li>
-                    <li><a href="">Villas in Algarve
+                    <li><a href="">Algarve
                       </a></li>
                     <li><a href="">
-                      Villas in Corfu
+                      Corfu
                       </a></li>
                   </ul></div>
-                  <div class="col-3">Villas in Florida
+                  <div class="col-3">
                     <ul class="list-unstyled">
-                    <li><a href="">Villas in Menorca
+                      <li><a href="">Florida</a></li>
+                    <li><a href="">Menorca
                       </a></li>
-                    <li><a href="">Villas in Majorca
+                    <li><a href="">Majorca
                      </a></li>
-                    <li><a href=""> Villas in Cyprus
+                    <li><a href="">Cyprus
                       </a></li>
                   </ul></div>
 
