--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="body bg-light">
   <nav class="navbar navbar-expand-lg bg-body-tertiary container-fluid">
     <div class="container-fluid">
-      <a class="navbar-brand " href="#"><img class="w-25 h-25" style="border-radius: 50%;" src="./images/travel-logo-03.jpg" alt="..."></a>
+      <a class="navbar-brand " href="#"><img class="" style="width:70px; height:70px; border-radius: 50%;" src="./images/travel-logo-03.jpg" alt="..."></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
