--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
   <section class=" p-5">
     <div class="abt" style="text-align: justify;
     font-size: smaller;">
-      <h3>What do Vrbo rentals offer?</h3>
+      <h3>What do traves offer?</h3>
       <p class="lh-lg">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium id error asperiores doloribus a
         blanditiis possimus, at nesciunt libero cupiditate nihil voluptatem, fugit nam ab porro minus eius quasi alias.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta similique libero alias accusamus adipisci placeat
