--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
         </a>
         <h5>Athirappilly</h5>
-        <p class="txt fst-italic" style="font-size: 13px;">
+        <p class="txt fst-italic" style="font-size: 13px; ">
           Athirappilly is a first grade Grama Panchayath with 489.00 km² area in Chalakudy Taluk, Thrissur district in Kerala, India. It is located 60 km from Thrissur city, 70 km northeast of Kochi city, 55 km northeast of Cochin International Airport, and 30 km from Chalakudy town</p>
         
 
@@ -194,7 +194,7 @@
 
     </div>
 
-    <div class="places p-sm-5 m-sm-5">
+    <div class="places p-sm-5 m-sm-5" style="padding-top: 50px;">
       <h3 class="text-center">Find spaces that suit your style</h3>
       <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
         <div class="carousel-inner">
